# pCloudTool

./: .gitignore  CHANGELOG.md  CODE_ANALYSIS_REPORT.md  CONTRIBUTING.md  Cargo.toml  DEBUG_DIRECTORY_LOADING.md  FIXED_DIRECTORY_LOADING.md  LICENSE  README.md  RUST_README.md  SCREENSHOTS.md  cli.py  example.py  gui.py  launch_gui.py  pcloud_fast_transfer.py  requirements.txt  test_list.rs
.github/workflows/: ci.yml
src/: lib.rs
tests/: integration_test.rs
