[package]
name = "pcloud-rust"
version = "0.1.0"
edition = "2021"
authors = ["pCloud Fast Transfer Contributors"]
description = "High-performance pCloud file transfer tool with parallel uploads/downloads, recursive folder sync, and modern GUI/CLI interfaces"
license = "MIT"
repository = "https://github.com/conniecombs/NewProject"
keywords = ["pcloud", "file-transfer", "sync", "upload", "download"]
categories = ["command-line-utilities", "network-programming"]
readme = "README.md"
rust-version = "1.70"

[[bin]]
name = "pcloud-gui"
path = "src/bin/gui.rs"

[[bin]]
name = "pcloud-cli"
path = "src/bin/cli.rs"

[dependencies]
# HTTP client with streaming and multipart support
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }

# Async utilities
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Hashing for duplicate detection
sha2 = "0.10"
hex = "0.4"

# GUI framework
iced = { version = "0.13", features = ["tokio", "advanced"] }

# File dialog
rfd = "0.14"

# Directory walking
walkdir = "2.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Unique IDs for atomic uploads
uuid = { version = "1.0", features = ["v4"] }

# CLI Progress bars
indicatif = "0.17"

[dev-dependencies]
# Testing utilities
tokio-test = "0.4"
tempfile = "3.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"