[package]
name = "pcloud-rust"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
authors = ["pCloud Fast Transfer Contributors"]
description = """
High-performance pCloud file transfer tool with parallel uploads/downloads,
recursive folder sync, resumable transfers, and modern GUI/CLI interfaces.
"""
license = "MIT"
repository = "https://github.com/conniecombs/pCloudTool"
homepage = "https://github.com/conniecombs/pCloudTool"
documentation = "https://docs.rs/pcloud-rust"
readme = "README.md"
keywords = ["pcloud", "file-transfer", "sync", "cloud-storage", "backup"]
categories = ["command-line-utilities", "network-programming", "filesystem"]
exclude = [
    ".github/*",
    "tests/*",
    "*.md",
    "!README.md",
    "!CHANGELOG.md",
    "!LICENSE",
]

# =============================================================================
# Binary Targets
# =============================================================================

[[bin]]
name = "pcloud-gui"
path = "src/bin/gui.rs"
doc = false

[[bin]]
name = "pcloud-cli"
path = "src/bin/cli.rs"
doc = false

# =============================================================================
# Dependencies
# =============================================================================

[dependencies]
# ─────────────────────────────────────────────────────────────────────────────
# HTTP & Networking
# ─────────────────────────────────────────────────────────────────────────────
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
    "multipart",
    "rustls-tls",
] }

# ─────────────────────────────────────────────────────────────────────────────
# Async Runtime
# ─────────────────────────────────────────────────────────────────────────────
tokio = { version = "1.42", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
async-stream = "0.3"

# ─────────────────────────────────────────────────────────────────────────────
# Serialization
# ─────────────────────────────────────────────────────────────────────────────
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# ─────────────────────────────────────────────────────────────────────────────
# Error Handling
# ─────────────────────────────────────────────────────────────────────────────
anyhow = "1.0"
thiserror = "1.0"

# ─────────────────────────────────────────────────────────────────────────────
# CLI Framework
# ─────────────────────────────────────────────────────────────────────────────
clap = { version = "4.5", features = ["derive", "env", "wrap_help"] }
indicatif = "0.17"

# ─────────────────────────────────────────────────────────────────────────────
# GUI Framework
# ─────────────────────────────────────────────────────────────────────────────
iced = { version = "0.13", features = ["tokio", "advanced"] }
rfd = "0.14"

# ─────────────────────────────────────────────────────────────────────────────
# Cryptography & Hashing
# ─────────────────────────────────────────────────────────────────────────────
sha2 = "0.10"
hex = "0.4"

# ─────────────────────────────────────────────────────────────────────────────
# File System
# ─────────────────────────────────────────────────────────────────────────────
walkdir = "2.5"

# ─────────────────────────────────────────────────────────────────────────────
# Logging & Diagnostics
# ─────────────────────────────────────────────────────────────────────────────
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ─────────────────────────────────────────────────────────────────────────────
# Utilities
# ─────────────────────────────────────────────────────────────────────────────
uuid = { version = "1.0", features = ["v4"] }
sysinfo = "0.32"

# =============================================================================
# Development Dependencies
# =============================================================================

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.10"

# =============================================================================
# Build Profiles
# =============================================================================

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2

# =============================================================================
# Lints
# =============================================================================

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
# Pedantic lints are informative but often too strict
pedantic = { level = "allow", priority = -1 }
# Specific useful pedantic lints
cloned_instead_of_copied = "warn"
explicit_iter_loop = "warn"
uninlined_format_args = "warn"
semicolon_if_nothing_returned = "warn"
